--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>>
 <html>
     <body>
-        <p>Radio check. Ground control to major tom. Pilot, please confirm.</p>
+        <p>Radio check. Ground control to Major Tom. Pilot, please confirm.</p>
     </body>
 </html>
