--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>>
 <html>
     <body>
+        <h2>Ground Control</h2>
         <p>Radio check. Ground control to Major Tom. Pilot, please confirm.</p>
+        <H2>Major Tom</H2>
         <p>Radio check. Major Tom received message. Over</p>
+        <h2>Ground Control</h2>
+        <p>Ground Control to Major Tom, check ignition engine's on. Commencing countdown, and may all luck be with you.</p>
     </body>
 </html>
