--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
     <body>
         <h2>Ground Control</h2>
         <p>Radio check. Ground control to Major Tom. Pilot, please confirm.</p>
