--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>>
 <html>
     <body>
-        <h2>Ground Control</h2>
+        <h1>Radio Log History</h1>
+        <h2>Log BOW13-5P4C3</h2>
+        <h3>Ground Control</h3>
         <p>Radio check. Ground control to Major Tom. Pilot, please confirm.</p>
-        <H2>Major Tom</H2>
+        <H3>Major Tom</H3>
         <p>Radio check. Major Tom received message. Over</p>
-        <h2>Ground Control</h2>
+        <h3>Ground Control</h3>
         <p>Ground Control to Major Tom, check ignition engine's on. Commencing countdown, and may all luck be with you.</p>
-        <h2>Major Tom</h2>
+        <h3>Major Tom</h3>
         <p>Ignition engine on. All system go</p>
+        <h3>Ground Control</h3>
+        <p>This is Ground Control to Major Tom, you've really made the grade. It's time to leave the capsule and make that large leap for mankind.</p>
+        <h2>Log Summary</h2>
+        <p><em>Communication log BOW13-5P4C3 ends in static here. We are unsure of what happened to end this mission, communication with Major Tom ceased at 20:00 on 2024, July 29th. Whereabouts unknown.</em></p>
     </body>
 </html>
