--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <h3>Ground Control</h3>
         <p>This is Ground Control to Major Tom, you've really made the grade. It's time to leave the capsule and make that large leap for mankind.</p>
         <h2>Log Summary</h2>
-        <p><em>Communication log BOW13-5P4C3 ends in static here. We are unsure of what happened to end this mission, communication with Major Tom ceased at 20:00 on 2024, July 29th. Whereabouts unknown.</em></p>
+        <p><em>Communication Log BOW13-5P4C3 ends in static here. We are unsure of what happened to end this mission, communication with Major Tom ceased at 20:00 on 2024, July 29th. Whereabouts unknown.</em></p>
     </body>
 </html>
