I couldn't help myself

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <p>Ignition engine on. All system go</p>
         <h3>Ground Control</h3>
         <p>This is Ground Control to Major Tom, you've really made the grade. It's time to leave the capsule and make that large leap for mankind.</p>
+        <h3>Major Tom</h3>
+        <p>This is Major Tom to Ground Control, I'm stepping through the door, and I'm floating in a most peculiar way. The stars seem different today. I'm <em>static</em> in a tin can far abo<em>static</em>-thing I can do. Tell my wife I love her very much, she knows.</p>
+        <h3>Ground Control</h3>
+        <p>Ground Control to Major Tom, your circuits dead. Is something wrong? Can you hear me Major Tom? Do you read me Major Tom?
+            <em>Static and Silence</em>
+            Do you read me, Major Tom?
+        </p>
         <h2>Log Summary</h2>
         <p><em>Communication Log BOW13-5P4C3 ends in static here. We are unsure of what happened to end this mission, communication with Major Tom ceased at 20:00 on 2024, July 29th. Whereabouts unknown.</em></p>
     </body>
